--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <form action="post">
     <fieldset>
-      <legend>Datos personales</legend>
+      <legend>DATOS PERSONALES</legend>
       <label for="nombre">Nombre: </label>
-      <input type="text" id="nombre" name="nombre" required><br><br>
+      <input type="text" id="nombre" name="nombre" required><br>
       <label for="edad">Edad: </label>
-      <input type="number" name="edad" id="edad" min=18 max=120 required><br></br>
+      <input type="number" name="edad" id="edad" min=18 max=120 required><br>
       <label for="genero">Género</label>
       <select id="genero" name="genero" required>
         <option value="" disabled selected>Selecciona una opción</option>
@@ -29,7 +29,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>Cuestionario</legend>
+      <legend>CUESTIONARIO</legend>
       <p>¿Cuál es el país con más hablantes nativos de español en el mundo?</p>
       <input type="radio" id="mexico" name="lenguaje" value="México" required>
       <label for="mexico">México</label><br>
@@ -122,7 +122,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>Comentarios</legend>
+      <legend>COMENTARIOS</legend>
       <p><label for="comentario">Deja un comentario:</label></p>
       <textarea id="comentario" name="comentario" rows="5" cols="100" required></textarea>
     </fieldset>
